# SmolDocling-Document-Processor-Public

./: LICENSE  README.md  main.py  pyproject.toml  requrements.txt
